fix: add color property to mobile menu trigger for better visibility

--- a/styles/components/app-header.scss
+++ b/styles/components/app-header.scss
@@ -69,6 +69,7 @@
         cursor: pointer;
         padding: pxToRem(8);
         display: none;
+        color: #000;
 
         // show on mobile
         @media only screen and (max-width: pxToRem(768)) {
